tests/codegen/fail/unsupported_async_unsafe_main_build.ql
async unsafe fn main() -> Int {
    return 0
}
